# gameoflife

./: CMakeLists.txt  README.md
src/: gamegrid.hpp  gameoflife.hpp  main.cpp
